prevented background image from shifting on list opens

--- a/src/components/ListHome.css
+++ b/src/components/ListHome.css
@@ -5,9 +5,7 @@ body{
 @media screen and (min-width: 550px) {
     .homePage{
         background-image: url(/images/background-gradient.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-color: gray;
+        background-size: 1500px;
         font-size: 0;
     }
 }
